Fix button width on smaller screens

--- a/resources/sass/form-input.scss
+++ b/resources/sass/form-input.scss
@@ -30,8 +30,18 @@ input {
     background: $color--grey;
     max-width: 150px;
     height: 35px;
-    padding: 10px 20px;
-    margin: 10px;
+    padding: 10px 0;
+    margin: 10px 0;
+
+    @media all and (min-width: $breakpoint--tablet){
+        padding: 10px 10px;
+        margin: 10px;
+    }
+    @media all and (min-width: $breakpoint--web){
+        padding: 10px 20px;
+        margin: 10px;
+    }
+
 
 
     &:hover, &:active {
